ComboBox has white Background (Fixes #142); Remove scrollbars in Inspector; other small ui improvements

--- a/src/main/resources/styles/gecko.css
+++ b/src/main/resources/styles/gecko.css
@@ -13,6 +13,7 @@
     -fx-highlight3: #96e876;
     -fx-highlight3-hover: #76e88e;
     -fx-green: #5dbb63;
+    -fx-editable: #ffffff;
 }
 
 .root {
